# to_do_list

./: .gitignore  Makefile  alembic.ini  docker-compose-dev.yml  pyproject.toml  readme.md
src/: config.py
src/core/application/shared/: exceptions.py  interfaces.py  use_case.py
src/core/application/task/: dto.py  exceptions.py  interfaces.py  use_cases.py
src/core/application/user/: dto.py  exceptions.py  interfaces.py  use_case.py
src/core/domain/models/: __init__.py  task.py  user.py
src/infrastructure/database/: __init__.py  config.py  db.py  implementation.py
src/infrastructure/database/alembic/: env.py
src/infrastructure/database/alembic/versions/: 3bf73c6c51a6_.py
src/infrastructure/database/models/: __init__.py  base.py  task.py  user.py
src/infrastructure/database/repositories/: __init__.py  base.py  task.py  user.py
src/presentation/api/: __main__.py
src/presentation/api/handlers/: helpers.py  setup.py  task.py  user.py
src/presentation/api/handlers/exceptions/: __init__.py  setup.py  task.py  user.py
src/presentation/api/handlers/requests/: __init__.py  task.py  user.py
src/presentation/api/handlers/responses/: __init__.py  paginated.py  task.py  user.py
src/presentation/api/middlewares/: __init__.py  setup.py
src/presentation/api/providers/: __init__.py  infrastructure.py  stub.py  use_cases.py
